2000-10-01 20:55:53  ShengHuo ZHU  <zsh@cs.rochester.edu>

	Don't postpone GCC if none of GCC methods is agent-covered.  This
	fix presumes that the post-method must be agent-covered if any Gcc
	method is agent-covered.

	* gnus-msg.el (gnus-inews-group-method): New function.
	(gnus-inews-do-gcc): Use it.
	* gnus-agent.el (gnus-agent-any-covered-gcc): New function.
	(gnus-agent-possibly-save-gcc): Use it.
	(gnus-agent-possibly-do-gcc): Ditto.

2000-10-01 17:08:50  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mailcap.el (mailcap-mime-types): Use mailcap-mime-data.
	* mml.el (mml-minibuffer-read-type): Use mailcap-mime-types.

2000-10-01 13:07:21  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* webmail.el (webmail-netscape-open, webmail-hotmail-article,
	webmail-hotmail-list): Update.

2000-10-01 08:36:09  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mail-source.el (mail-source-report-new-mail): Use
	nnheader-cancel-timer.

2000-10-01 08:35:38  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* lpath.el (overlay-*): Shut up.
	* dgnushack.el: Two implementations of smiley.

2000-10-01 08:32:42  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-ml.el: Usage.
	(gnus-mailing-list-archive, gnus-mailing-list-owner,
	gnus-mailing-list-post, gnus-mailing-list-unsubscribe,
	gnus-mailing-list-subscribe, gnus-mailing-list-help): Bind list-*.
	(gnus-mailing-list-menu): Define it.
	(turn-on-gnus-mailing-list-mode, gnus-mailing-list-mode): Autoload.
	
	* gnus-xmas.el (gnus-xmas-mailing-list-menu-add): Move here.

2000-09-30 18:52:51  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* webmail.el (webmail-my-deja-*): Rewrite.

2000-09-30  Simon Josefsson  <simon@josefsson.org>

	* nnimap.el (nnimap-request-accept-article): Remove \n's from
	From_ lines.

2000-08-05  Simon Josefsson <simon@josefsson.org>

	Make GCC to remote groups work when unplugged
	(postpone GCC until message is actually sent).

	* gnus-draft.el (gnus-draft-send): Call `gnus-agent-restore-gcc'.

	* gnus-agent.el (gnus-agent-possibly-do-gcc): 