@@ -414,13 +414,13 @@
   (skip-chars-forward " \t\n\r")
   (let (site url newp (total "0"))
     (if (eobp)
-	(setq total "0"))
-    (if (re-search-forward "\\([0-9]+\\) *<b>(\\([0-9]+\\) new)" nil t) 
-	(message "Found %s (%s new)" (setq total (match-string 1)) 
-		 (match-string 2))
-      (if (re-search-forward "\\([0-9]+\\) new" nil t) 
-	  (message "Found %s new" (setq total (match-string 1)))
-	(webmail-error "list@0")))
+	(setq total "0")
+      (if (re-search-forward "\\([0-9]+\\) *<b>(\\([0-9]+\\) new)" nil t) 
+	  (message "Found %s (%s new)" (setq total (match-string 1)) 
+		   (match-string 2))
+	(if (re-search-forward "\\([0-9]+\\) new" nil t) 
+	    (message "Found %s new" (setq total (match-string 1)))
+	  (webmail-error "list@0"))))
     (unless (equal total "0")
       (goto-char (point-min))
       (if (re-search-forward 
